# benchmark-rrc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  goal.json  image.def  package.xml  run  run_locally.sh  run_locally_bo.sh  run_real_bo  run_real_normal  setup.cfg  setup.py
log_manager/: README.md  after_job.sh  download_logs.sh  funcs.sh  make_plots.sh  make_video.sh  roboch.json  run.sh  sshkey  submit_job.sh  submit_jobs_in_sequence.sh
log_manager/plot_scripts/: finger_position.py  plot.py
log_manager/replay_scripts/: compute_reward.py  generate_replay_video.sh  replay.py
python/cic/: control_main_class.py  grasping_class.py  math_tools.py  motion_primitives.py  object_class.py  parameters.py  parameters_new_grasp.py  rotation_primitives.py  trifinger_mod.urdf  utils.py
python/combined_code/: __init__.py  mix_and_match.py
python/cpc/: parameters.py  state_machine.py
python/env/: cube_env.py  initializers.py  make_env.py  pinocchio_utils.py  reward_fns.py  termination_fns.py  viz.py  wrappers.py
python/mp/: action_sequences.py  align_rotation.py  const.py  set_hyperparams.py  state_machines.py  utils.py
python/pybullet_planning/: README.md
python/residual_learning/: __init__.py  domain_randomization.py  eval.py  get_ob_norm.py  make_training_env.py  modules.py  networks.py  obs_norm.pt  obs_norm_rand.pt  residual_sac.py  residual_state.py  residual_state_machines.py  residual_wrappers.py  state_machines.py  train.py  (+2 more)
scripts/: run_episode.py  run_local_episode.py
training_scripts/: build_ws.py  evaluate.sh  run_script_local.sh  visualize.sh
(+81 files in other folders)
